--- a/package.json
+++ b/package.json
@@ -29,5 +29,11 @@
         "webpack": "^5.50.0",
         "webpack-cli": "^4.7.2",
         "webpack-dev-server": "^3.11.2"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.9.3",
+        "bootstrap": "^5.1.0",
+        "jquery": "^3.6.0",
+        "popper.js": "^1.16.1"
     }
 }
